--- a/Hw2.html
+++ b/Hw2.html
@@ -38,7 +38,7 @@
 						    and Close the door
 </div>
 <div id="angleInfo"> </div>
-<audio id="sound" autoplay loop style="display:none">
+<audio id="sound" style="display:none">
 <source src="music/door.wav" type='audio/mp3'>
 <script src="js/three.min.js"></script>
 <script src="js/OrbitControls.js"></script>
