--- a/Hw2.html
+++ b/Hw2.html
@@ -199,24 +199,21 @@ function animate()
 		{	
 			angle += 0.01;
 			axis.rotation.y = -angle;
-			if(angle>=Math.PI/6)
+			if(angle==Math.PI/6)
 			{
 				turn=1;
 				sound.play();
 			}
 		}
 		
-		if(turn==1&&(angle>0))
+		if(turn==1&&(angle>0&&angle<Math.PI/6))
 		{	
 			angle -= 0.01;
 			angle2 += 0.01;
 			axis.rotation.y = -angle;
 			doorshaft.rotation.y = angle2*3;
 			if(angle<=0)
-			{
 				turn=2;
-				sound.pause();
-			}
 		}
 
 	}
@@ -229,22 +226,19 @@ function animate()
 			angle2 -= 0.01;
 			axis.rotation.y = -angle;
 			doorshaft.rotation.y = angle2*3;
-			if(angle>=Math.PI/6)
+			if(angle==Math.PI/6)
 			{
 				turn=1;
 				sound.play();
 			}
 		}
 		
-		if(turn==1&&(angle>0))
+		if(turn==1&&(angle>0&&angle<Math.PI/6))
 		{	
 			angle -= 0.01;
 			axis.rotation.y = -angle;
 			if(angle<=0)
-			{
 				turn=2;
-				sound.pause();
-			}
 		}
 		
 	}
