--- a/Hw2.html
+++ b/Hw2.html
@@ -195,7 +195,7 @@ function animate()
 	
 	if(doorturn==1)
 	{
-		if(turn==0&&(angle<-Math.PI/6))
+		if(turn==0&&(angle<Math.PI/6))
 		{	
 			angle += 0.01;
 			axis.rotation.y = -angle;
@@ -206,7 +206,7 @@ function animate()
 			}
 		}
 		
-		if(turn==1&&(angle>0&&angle<-Math.PI/6))
+		if(turn==1&&(angle>0&&angle2<Math.PI/6))
 		{	
 			angle -= 0.01;
 			angle2 += 0.01;
@@ -220,7 +220,7 @@ function animate()
 	
 	if(doorturn==0)
 	{
-		if(turn==0&&(angle<-Math.PI/6))
+		if(turn==0&&(angle<Math.PI/6))
 		{	
 			angle += 0.01;
 			angle2 -= 0.01;
@@ -233,7 +233,7 @@ function animate()
 			}
 		}
 		
-		if(turn==1&&(angle>0&&angle<-Math.PI/6))
+		if(turn==1&&(angle>0&&angle2<Math.PI/6))
 		{	
 			angle -= 0.01;
 			axis.rotation.y = -angle;
