--- a/Hw2.html
+++ b/Hw2.html
@@ -195,18 +195,18 @@ function animate()
 	
 	if(doorturn==1)
 	{
-		if(turn==0&&(angle<Math.PI/6))
+		if(turn==0&&(angle<=Math.PI/6))
 		{	
 			angle += 0.01;
 			axis.rotation.y = -angle;
-			if(angle==Math.PI/6)
+			if(angle>=Math.PI/6)
 			{
 				turn=1;
 				sound.play();
 			}
 		}
 		
-		if(turn==1&&(angle>0&&angle2<Math.PI/6))
+		if(turn==1&&(angle>0&&angle2<=Math.PI/6))
 		{	
 			angle -= 0.01;
 			angle2 += 0.01;
@@ -220,20 +220,20 @@ function animate()
 	
 	if(doorturn==0)
 	{
-		if(turn==0&&(angle<Math.PI/6))
+		if(turn==0&&(angle<=Math.PI/6))
 		{	
 			angle += 0.01;
 			angle2 -= 0.01;
 			axis.rotation.y = -angle;
 			doorshaft.rotation.y = angle2*3;
-			if(angle==Math.PI/6)
+			if(angle>=Math.PI/6)
 			{
 				turn=1;
 				sound.play();
 			}
 		}
 		
-		if(turn==1&&(angle>0&&angle2<Math.PI/6))
+		if(turn==1&&(angle>0&&angle2<=Math.PI/6))
 		{	
 			angle -= 0.01;
 			axis.rotation.y = -angle;
