--- a/Hw2.html
+++ b/Hw2.html
@@ -233,7 +233,7 @@ function animate()
 			}
 		}
 		
-		if(turn==1&&(angle>0&&angle2<=Math.PI/6))
+		if(turn==1&&(angle>0&&angle2>0))
 		{	
 			angle -= 0.01;
 			axis.rotation.y = -angle;
