--- a/Hw2.html
+++ b/Hw2.html
@@ -220,7 +220,7 @@ function animate()
 	
 	if(doorturn==0)
 	{
-		if(turn==0&&(angle<=Math.PI/6))
+		if(turn==0&&(angle2>=0&&angle<=Math.PI/6))
 		{	
 			angle += 0.01;
 			angle2 -= 0.01;
