--- a/Hw2.html
+++ b/Hw2.html
@@ -199,7 +199,7 @@ function animate()
 		{	
 			angle += 0.01;
 			axis.rotation.y = -angle;
-			if(angle>=Math.PI/6)
+			if(angle>=Math.PI/6&&angle2<=0)
 			{
 				turn=1;
 				sound.play();
