--- a/Hw2.html
+++ b/Hw2.html
@@ -257,10 +257,10 @@ function update()
 	if ( keyboard.down("Z"))  
 	{	
 		doorturn = (doorturn+1)%2;
-		if(angle2<=0)
-		turn=0;
-		else
+		if(angle2>=0)
 		turn=1;
+		else
+		turn=0;
 		
 	}
 }
