--- a/Hw2.html
+++ b/Hw2.html
@@ -195,6 +195,8 @@ function animate()
 	
 	if(doorturn==1)
 	{
+		if(anfle2>=0)
+		turn=1;
 		if(turn==0&&(angle<=Math.PI/6))
 		{	
 			angle += 0.01;
