--- a/Hw2.html
+++ b/Hw2.html
@@ -195,9 +195,7 @@ function animate()
 	
 	if(doorturn==1)
 	{
-		if(anfle2>0)
-		turn=1;
-		else if(turn==0&&(angle<=Math.PI/6))
+		if(turn==0&&(angle<=Math.PI/6))
 		{	
 			angle += 0.01;
 			axis.rotation.y = -angle;
