--- a/Hw2.html
+++ b/Hw2.html
@@ -200,7 +200,7 @@ function animate()
 	
 	if(doorturn==1)
 	{
-		if(turn==0&&angle2>=0)
+		if(turn==0&&angle2>0)
 		turn=1;
 		else if(turn==0&&(angle<=Math.PI/6))
 		{	
