--- a/Hw2.html
+++ b/Hw2.html
@@ -38,7 +38,7 @@
 						    and Close the door
 </div>
 <div id="angleInfo"> </div>
-<audio id="sound"  style="display:none">
+<audio id="sound" style="display:none">
 <source src="music/door.wav" type='audio/mp3'>
 <script src="js/three.min.js"></script>
 <script src="js/OrbitControls.js"></script>
@@ -67,7 +67,7 @@ function init()
 {
 	var width = window.innerWidth;
 	var height = window.innerHeight;
-	sound.pause();
+	
 	debugger;
 	var container = document.getElementById ( 'container' );
 	
@@ -122,7 +122,7 @@ function init()
 	doorshaft2.position.set(73.5, 25, 1.5);
 
 	
-	var doorGeometry = new THREE.BoxGeometry (47,94,3);		//門
+	var doorGeometry = new THREE.BoxGeometry (46.7,94,3);		//門
 	var doorMaterial = new THREE.MeshLambertMaterial ({map : doorTexture});
 	door = new THREE.Mesh (doorGeometry, doorMaterial);
 
@@ -131,21 +131,26 @@ function init()
 	scene.add (doorshaft);
 	scene.add (doorshaft2);
 
-	var axisGeometry = new THREE.CylinderGeometry (1,1,5,20,20);	//門把棍
+	var axisGeometry = new THREE.CylinderGeometry (1,1,5.5,20,20);	//門把棍
 	var axisMaterial = new THREE.MeshLambertMaterial ({map : doorknobTexture});
 	axis = new THREE.Mesh (axisGeometry, axisMaterial);
 	axis.rotation.order = 'XYZ';
 	axis.rotation.x = (Math.PI/2);
-	axis.position.set (-22.5, 0, 2);
+	axis.position.set (-22, 0, 0);
 	door.add (axis);
 	
 	var doorknobGeometry = new THREE.BoxGeometry (10,2,0.5);		//門把
 	var doorknobMaterial = new THREE.MeshLambertMaterial ({map : doorknobTexture});
 	doorknob = new THREE.Mesh (doorknobGeometry, doorknobMaterial);
+	doorknob2 = new THREE.Mesh (doorknobGeometry, doorknobMaterial);
 	doorknob.rotation.order = 'XYZ';
 	doorknob.rotation.x = -(Math.PI/2);
 	doorknob.position.set (4, 2.5, 0);
+	doorknob2.rotation.order = 'XYZ';
+	doorknob2.rotation.x = -(Math.PI/2);
+	doorknob2.position.set (4, -2.5, 0);
 	axis.add (doorknob);
+	axis.add (doorknob2);
 	
 	camera = new THREE.PerspectiveCamera (45, width/height, 0.1, 10000000);
 	camera.position.y = 160;
@@ -195,18 +200,20 @@ function animate()
 	
 	if(doorturn==1)
 	{
-		if(turn==0&&(angle<Math.PI/6))
+		if(turn==0&&angle2>0)
+		turn=1;
+		else if(turn==0&&(angle<=Math.PI/6))
 		{	
 			angle += 0.01;
 			axis.rotation.y = -angle;
-			if(angle==Math.PI/6)
+			if((angle>=Math.PI/6)&&angle2<=0)
 			{
 				turn=1;
 				sound.play();
 			}
 		}
 		
-		if(turn==1&&(angle>0&&angle<Math.PI/6))
+		if(turn==1&&(angle>0&&angle2<=Math.PI/6))
 		{	
 			angle -= 0.01;
 			angle2 += 0.01;
@@ -214,33 +221,31 @@ function animate()
 			doorshaft.rotation.y = angle2*3;
 			if(angle<=0)
 				turn=2;
-
 		}
 
 	}
 	
 	if(doorturn==0)
 	{
-		if(turn==0&&(angle<Math.PI/6))
+		if(turn==0&&(angle2>=0))
 		{	
 			angle += 0.01;
 			angle2 -= 0.01;
 			axis.rotation.y = -angle;
 			doorshaft.rotation.y = angle2*3;
-			if(angle==Math.PI/6)
+			if(angle2<=0)
 			{
 				turn=1;
 				sound.play();
 			}
 		}
 		
-		if(turn==1&&(angle>0&&angle<Math.PI/6))
+		if(turn==1&&(angle>0))
 		{	
 			angle -= 0.01;
 			axis.rotation.y = -angle;
 			if(angle<=0)
 				turn=2;
-
 		}
 		
 	}
