--- a/Hw2.html
+++ b/Hw2.html
@@ -240,6 +240,7 @@ function animate()
 			angle += 0.01;
 			angle2 -= 0.01;
 			axis.rotation.y = -angle;
+			knob.position.set (-23-angle, 0, 0);
 			doorshaft.rotation.y = angle2*3;
 			if(angle2<=0)
 			{
@@ -252,6 +253,7 @@ function animate()
 		{	
 			angle -= 0.01;
 			axis.rotation.y = -angle;
+			knob.position.set (-23-angle, 0, 0);
 			if(angle<=0)
 				turn=2;
 		}
