--- a/Hw2.html
+++ b/Hw2.html
@@ -131,7 +131,7 @@ function init()
 	scene.add (doorshaft);
 	scene.add (doorshaft2);
 
-	var knobGeometry = new THREE.BoxGeometry (6,2,0.5);		//門鎖
+	var knobGeometry = new THREE.BoxGeometry (3,2,0.5);		//門鎖
 	var knobMaterial = new THREE.MeshLambertMaterial ({map : doorknobTexture});
 	knob = new THREE.Mesh (knobGeometry, knobMaterial);
 	knob.position.set (-23, 0, 0);
@@ -212,6 +212,7 @@ function animate()
 		{	
 			angle += 0.01;
 			axis.rotation.y = -angle;
+			knob.position.set (-23-angle*10, 0, 0);
 			if((angle>=Math.PI/6)&&angle2<=0)
 			{
 				turn=1;
@@ -224,6 +225,7 @@ function animate()
 			angle -= 0.01;
 			angle2 += 0.01;
 			axis.rotation.y = -angle;
+			knob.position.set (-23-angle*10, 0, 0);
 			doorshaft.rotation.y = angle2*3;
 			if(angle<=0)
 				turn=2;
@@ -238,6 +240,7 @@ function animate()
 			angle += 0.01;
 			angle2 -= 0.01;
 			axis.rotation.y = -angle;
+			knob.position.set (-23-angle*10, 0, 0);
 			doorshaft.rotation.y = angle2*3;
 			if(angle2<=0)
 			{
@@ -250,6 +253,7 @@ function animate()
 		{	
 			angle -= 0.01;
 			axis.rotation.y = -angle;
+			knob.position.set (-23-angle*10, 0, 0);
 			if(angle<=0)
 				turn=2;
 		}
